<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="setting">설정</string>
    <string name="my_information">내 정보</string>
    <string name="nickname">닉네임</string>
    <string name="birthday">생일</string>
    <string name="socal_account">소셜 계정</string>
    <string name="alert_setting">알림 설정</string>
    <string name="app_alert">앱 알림</string>
    <string name="records_alert">기록별 알림</string>
    <string name="policy">약관 및 정책</string>
    <string name="inquiry">문의하기</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">탈퇴하기</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="change_birthdate">생일 수정</string>
    <string name="cancel">취소</string>
    <string name="revise">수정하기</string>
    <string name="system_notification_description">현재 시스템 알림이 꺼져있어요. \n지금 바로 알림을 켜주세요!</string>
    <string name="setting_notification">알림 설정</string>
    <string name="blank_string" />
    <string name="goal_notification_title">목표 미설정 알림</string>
    <string name="goal_notification_body">목표 기록 미설정 시 알림</string>
    <string name="record_all_notification">기록 전체 알림</string>
    <string name="daily_record_notification">하루 기록</string>
    <string name="record_notification">미 기록 알림</string>
    <string name="exercise_record_notification">운동 기록</string>
    <string name="habit_record_notification">습관 기록</string>
    <string name="schedule_notification">일정 알림</string>
    <string name="habit_time_notification">등록 시간 알림</string>

    <string name="system_notification_banner_title">현재 시스템 알림이 꺼져있어요.\n지금 바로 알림을 켜주세요!</string>
    <string name="system_notification_banner_body">알림 설정</string>
</resources>
