...
    <string name="today_records_over_title">오늘의 기록 2개가 모두 채워졌어요.</string>
    <string name="today_records_over_body">내일 다시 시도해 주세요.</string>

    <string name="nickname_hint">닉네임 혹은 이름을 입력해 주세요.</string>
    <string name="nickname_description">한글, 영문 최대 6글자 / 공백, 특수기호 입력 불가</string>

    <string name="logout_title">로그아웃 하시겠습니까?</string>
    <string name="logout_body">로그아웃 후에는 다시 로그인해야만\n서비스 이용이 가능해요.</string>
    <string name="logout_cancel">닫기</string>
    <string name="logout_confirm">로그아웃</string>

    <string name="withdrawal_title">탈퇴를 진행 하시겠습니까?</string>
    <string name="withdrawal_body">탈퇴 시 모든 정보가 삭제되며, 복구가 불가능합니다.</string>
    <string name="withdrawal_cancel">닫기</string>
    <string name="withdrawal_confirm">탈퇴하기</string>

    <string name="current_goal_banner_title">새 목표를 통해 다른\n하루를 시작해보세요</string>
    <string name="current_goal_banner_body">새 목표 설정하기</string>

    <string name="daily_title">하루 기록</string>
...
