...
                )
                Image(
                    modifier = Modifier
                        .align(Alignment.CenterEnd)
                        .clickable { onDismiss() },
                    painter = painterResource(see.day.ui.R.drawable.ic_close),
                    contentDescription = "종료 버튼"
                )
            }
        }
    ) {
        Column(modifier = modifier) {
            NicknameChangedComponent(
...
